--- a/vagrant-3mons-3osd/Vagrantfile
+++ b/vagrant-3mons-3osd/Vagrantfile
@@ -57,10 +57,15 @@ Vagrant.configure("2") do |config|
     end
   end
 
-  # Client
+  # Clients
   config.vm.define "ceph-client-1" do |config|
     config.vm.box = "centos/atomic-host"
     config.vm.hostname = "ceph-client-1"
     config.vm.network "private_network", ip: '172.28.128.8'
+  end
+  config.vm.define "ceph-client-2" do |config|
+    config.vm.box = "deb/jessie-amd64"
+    config.vm.hostname = "ceph-client-2"
+    config.vm.network "private_network", ip: '172.28.128.9'
   end
 end
