--- a/vagrant-3mons-3osd/hosts/group_vars/all.yml
+++ b/vagrant-3mons-3osd/hosts/group_vars/all.yml
@@ -30,3 +30,4 @@ ntp_manage_config: true
 
 fetch_directory: "{{ inventory_dir}}/../fetch/"
 openshift_pv_config_directory: "{{ inventory_dir}}/../openshift/"
+osd_crush_tunables: firefly
