--- a/vagrant-3mons-3osd/Vagrantfile
+++ b/vagrant-3mons-3osd/Vagrantfile
@@ -62,10 +62,18 @@ Vagrant.configure("2") do |config|
     config.vm.box = "centos/atomic-host"
     config.vm.hostname = "ceph-client-1"
     config.vm.network "private_network", ip: '172.28.128.8'
+    config.vm.provider "virtualbox" do |vb|
+      vb.memory = 1024
+    end
   end
-  config.vm.define "ceph-client-2" do |config|
-    config.vm.box = "deb/jessie-amd64"
-    config.vm.hostname = "ceph-client-2"
-    config.vm.network "private_network", ip: '172.28.128.9'
-  end
+  #config.vm.define "ceph-client-2" do |config|
+    #config.vm.box = "deb/jessie-amd64"
+    #config.vm.hostname = "ceph-client-2"
+    #config.vm.network "private_network", ip: '172.28.128.9'
+  #end
+  #config.vm.define "ceph-client-3" do |config|
+    #config.vm.box = "ubuntu/trusty64"
+    #config.vm.hostname = "ceph-client-3"
+    #config.vm.network "private_network", ip: '172.28.128.10'
+  #end
 end
