When Crush Tunable profile is updated, restart all services

--- a/playbooks/configure-crush-tunable-profile.yml
+++ b/playbooks/configure-crush-tunable-profile.yml
@@ -1,3 +1,22 @@
 - hosts: mons
   roles:
   - configure-crush-tunable-profile
+
+- hosts: mons
+  tasks:
+  - name: Restart Ceph services
+    systemd: state=restarted name=ceph
+  - name: Restart Mons services
+    systemd: state=restarted name=ceph-mon@*
+    
+- hosts: osds
+  tasks:
+  - name: Restart Ceph services
+    systemd: state=restarted name=ceph
+  - name: Restart Osds services
+    systemd: state=restarted name=ceph-osd@*
+
+- hosts: ceph-client
+  tasks:
+  - name: Restart Ceph services
+    systemd: state=restarted name=ceph
