--- a/roles/ceph-rbd/tasks/create_image.yml
+++ b/roles/ceph-rbd/tasks/create_image.yml
@@ -6,8 +6,8 @@
 
 - block:
   - name: Create Ceph block device image
-    #command: rbd create --size {{ item.image_size }} rbd/{{ item.image_name }} --image-format 1 --image-feature layering
-    command: rbd create --size {{ item.image_size }} rbd/{{ item.image_name }} --image-format 1
+    command: rbd create --size {{ item.image_size }} rbd/{{ item.image_name }} --image-format 2 --image-feature layering
+    #command: rbd create --size {{ item.image_size }} rbd/{{ item.image_name }} --image-format 1
 
   - name: Map Ceph Block Device
     command: rbd map rbd/{{ item.image_name }} --id admin
