--- a/vagrant-3mons-3osd/hosts/group_vars/all.yml
+++ b/vagrant-3mons-3osd/hosts/group_vars/all.yml
@@ -10,8 +10,10 @@ public_network: 172.28.128.0/24
 cluster_network: "{{ public_network }}"
 ceph_conf_overrides:
    global:
-      osd_pool_default_size: 2
-      osd_pool_default_min_size: 1
+      osd pool default size: 2
+      osd pool default min size: 1
+      mon osd min down reporters: 1
+
 journal_collocation: True
 devices:
   - /dev/sdb
